--- a/21-Geolocation/style.css
+++ b/21-Geolocation/style.css
@@ -40,3 +40,13 @@ h1 {
   font-size: 15px;
 }
 /*Compass: https://thenounproject.com/search/?q=compass&i=592352*/
+
+.home__button{
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  font-weight: 100;
+}
